Decrease font of banner btn

--- a/src/site/includes/components/_banner.njk
+++ b/src/site/includes/components/_banner.njk
@@ -5,6 +5,6 @@
     <p class="normal-text">
         Quote GIVEBACK10
     </p>
-    <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="#quizSection">See packages</a>
+    <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="/services">See packages</a>
 </div>
 <div class="placeholder"></div>
