--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1519,19 +1519,20 @@ footer {
   background: #fbf2ec;
   color: 0;
   cursor: pointer;
-  right: -25rem;
+  right: -23rem;
   padding: 1em 2em 1em 2em;
   position: fixed;
   top: 15px;
-  height: 23em;
-  width: 18em;
+  height: 24em;
+  width: 20em;
   z-index: 99;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .nav {
-    height: 21em;
-    width: 16em;
+    height: 22em;
+    width: 19em;
+    padding: 1em 1em 1em 2em;
   }
 }
 
@@ -1544,15 +1545,15 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .nav {
     height: 19.5em;
-    width: 14em;
+    width: 16.5em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .nav {
     padding: 1em 2em .6em 1.5em;
-    height: 17em;
-    width: 12.5em;
+    height: 18.5em;
+    width: 15em;
   }
 }
 
@@ -1560,15 +1561,15 @@ footer {
   .nav {
     padding: 1em 1em .8em 1.3em;
     height: 16em;
-    width: 11em;
+    width: 14em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .nav {
-    padding: 1em 1em .8em 1em;
+    padding: 1em 1em .5em 1em;
     height: 14em;
-    width: 9em;
+    width: 12em;
   }
 }
 
@@ -2975,7 +2976,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) {
   .quiz-banner-btn {
-    font-size: .7em;
+    font-size: .65em;
     margin: 0;
     height: 70%;
   }
