Add js to control banner

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -42,9 +42,9 @@
                 <h2 class="logo-subtitle mb-0">The Roadblock Coach</h2>
             </a>
         </div>
-        <div id="header-nav" class="toggle-header-relative">
+        <div id="header-nav" class="toggle-header">
             <a class="header-link" href="/">
-                <h1 class="header-name-quiz d-md-none">Mhairi Todd</h1>
+                <h1 id="headerName" class="header-name d-md-none">Mhairi Todd</h1>
             </a>
             <div class="nav-toggle">
                 <h5 class="nav-toggle-text">MENU</h5>
