--- a/src/site/includes/components/_banner.njk
+++ b/src/site/includes/components/_banner.njk
@@ -3,7 +3,7 @@
         10% off any coaching package
     </h2>
     <p class="normal-text">
-        Quote GIVEBACK10
+        QUOTE: GIVEBACK10
     </p>
     <a id="bannerBtn" class="btn-pink quiz-banner-btn" href="/services">See packages</a>
 </div>
