Fix banner scrolll to

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -162,7 +162,7 @@
 
     <!-- back to top mobile-->
     <div class="back-to-top-footer d-md-none">
-        <a href="#header">
+        <a id="toTop" href="#header">
             <div class="to-top">
                 <svg class="icon-up-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 94 34"><path d="M9 20l1 1h68v4l1 1h1l5-6v-1l-5-5h-1l-1 1v4H10l-1 1z"></path></svg>
                 <h3 class="to-top-text">Back to top</h3>
