Add snipcart test to swift

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -26,6 +26,7 @@
     <link rel="manifest" href="/favicon_ico/manifest.json">
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.26/default/snipcart.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -182,6 +183,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+    <!-- snipcart API key -->
+    <script async src="https://cdn.snipcart.com/themes/v3.0.26/default/snipcart.js"></script>
+    <div id="snipcart" data-api-key="NjJkNmNjYzEtYmQxZC00NjU3LTlmYzItOTk0NjBmMzE0NmU3NjM3NDI0MTM5NjIwOTMwODgz" hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
