--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -166,6 +166,15 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                         <p class="normal-text">Investment: £155 (Value £265)</p>
                     </div>
                 </div>
+                <button class="buy-button snipcart-add-item"
+                    data-item-id="Swift"
+                    data-item-price="155"
+                    data-item-url="/services/"
+                    data-item-description="Swift Coaching Package"
+                    data-item-image=""
+                    data-item-name="Swift Coaching Package">
+                    Add to cart
+                </button>
             </div>
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
