Add changes to url

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -169,7 +169,7 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                 <button class="buy-button snipcart-add-item"
                     data-item-id="Swift"
                     data-item-price="155"
-                    data-item-url="https://mystifying-morse-754596.netlify.app/services/"
+                    data-item-url="https://mystifying-morse-754596.netlify.app/services"
                     data-item-description="Swift Coaching Package"
                     data-item-image=""
                     data-item-name="Swift Coaching Package">
