--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -163,6 +163,93 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
 
 <!-- END: you will gain section -->
 
+<!-- Gift card section -->
+<section class="gift-card-section">
+    <h2 class="sect-title">
+        Give the gift of a limitless life
+    </h2>
+    <div class="gift-card-intro">
+        <p class="normal-text">
+            Vexillologist aesthetic beard health goth jean shorts XOXO mustache sartorial everyday carry church-key celiac. Leggings irony VHS skateboard
+            , meh photo booth snackwave austin affogato helvetica hashtag. Cray VHS hammock pug kickstarter adaptogen. Street art raw denim poutine adaptogen freegan.
+            Vexillologist aesthetic beard health goth jean shorts XOXO mustache sartorial everyday carry church-key celiac. Leggings irony VHS skateboard,
+        </p>
+    </div>
+    <hr class="half-width-hr">
+    <div class="gift-card-content">
+        <div class="gift-card-item">
+            <div class="gift-card-img">
+                <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+            </div>
+            <div class="gift-card-text">
+                <div class="gift-card-text-content">
+                    <h4 class="sect-subtitle">
+                        I am Resilient
+                    </h4>
+                    <p class="normal-text">
+                        £50 coaching gift voucher 
+                    </p>
+                    <p class="normal-text">
+                        Obsidian card necklace
+                    </p>
+                    <div class="gift-card-btn about-cta-btn">
+                        <a href="" class="btn-pink normal-text">Purchase</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="half-width-hr">
+         <div class="gift-card-item">
+            <div class="gift-card-img">
+                <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+            </div>
+            <div class="gift-card-text">
+                <div class="gift-card-text-content">
+                    <h4 class="sect-subtitle">
+                        I am Resilient
+                    </h4>
+                    <p class="normal-text">
+                        £100 coaching gift voucher 
+                    </p>
+                    <p class="normal-text">
+                        Rose Quartz Silver necklace 
+                    </p>
+                    <div class="gift-card-btn about-cta-btn">
+                        <a href="" class="btn-pink normal-text">Purchase</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="half-width-hr">
+         <div class="gift-card-item">
+            <div class="gift-card-img">
+                <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+            </div>
+            <div class="gift-card-text">
+                <div class="gift-card-text-content">
+                    <h4 class="sect-subtitle">
+                        I am Resilient
+                    </h4>
+                    <p class="normal-text">
+                        £155 coaching gift voucher 
+                    </p>
+                    <p class="normal-text">
+                        Clear Quartz Gold Necklace 
+                        and pendant of choice
+                    </p>
+                    <div class="gift-card-btn about-cta-btn">
+                        <a href="" class="btn-pink normal-text">Purchase</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+
+<!-- END: Gift card section -->
+
 {% include 'components/_services-parralax.njk' %}
 
 <!-- why mhairi section -->
