--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -484,6 +484,65 @@
     
 }
 
+// ---------------------------------------------------------------
+// Gift card section
+// ---------------------------------------------------------------
+
+.gift-card-section{
+    text-align: center;
+    margin: auto;
+    padding: 2em 0 5em 0 ;
+    background: $gray;
+
+    .sect-title{
+        margin: 0 0 1em 0;
+    }
+}
+
+.gift-card-intro{
+    width: 90vw;
+    margin: auto;
+}
+
+.gift-card-item{
+    width: 85vw;
+    margin: 4em auto;
+    position: relative;
+    height: 34.5em;
+}
+
+.gift-card-img{
+    width: 100%;
+
+    img{
+        width: 100%;
+    }
+}
+
+.gift-card-text{
+    width: 90%;
+    margin: auto;
+    padding: 1.5em .5em;
+    border: solid 1px #e0e0e0;
+    position: absolute;
+    left: 0;
+    top: 20em;
+    right: 0;
+    background: white;
+
+    .normal-text{
+        margin-bottom: 0;
+    }
+    .sect-subtitle{
+        margin-bottom: 1.5em;
+    }
+}
+
+.gift-card-btn{
+    margin-top: 2em;
+}
+
+
 
 // ---------------------------------------------------------------
 // Home about section
