Add gift card items on md

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -183,7 +183,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-text-content">
-                    <h4 class="sect-subtitle">
+                    <h4 class="sect-subtitle normal-text">
                         I am Resilient
                     </h4>
                     <p class="normal-text">
@@ -198,14 +198,14 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 </div>
             </div>
         </div>
-        <hr class="half-width-hr">
+        <hr class="half-width-hr  d-md-none">
          <div class="gift-card-item">
             <div class="gift-card-img">
                 <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-text-content">
-                    <h4 class="sect-subtitle">
+                    <h4 class="sect-subtitle normal-text">
                         I am Resilient
                     </h4>
                     <p class="normal-text">
@@ -220,14 +220,14 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 </div>
             </div>
         </div>
-        <hr class="half-width-hr">
+        <hr class="half-width-hr  d-md-none">
          <div class="gift-card-item">
             <div class="gift-card-img">
                 <img src="static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
             </div>
             <div class="gift-card-text">
                 <div class="gift-card-text-content">
-                    <h4 class="sect-subtitle">
+                    <h4 class="sect-subtitle normal-text">
                         I am Resilient
                     </h4>
                     <p class="normal-text">
