--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -497,6 +497,10 @@
     @media #{$breakpoint-sm} {
         padding: 2em 0 4em 0;
     }
+    @media #{$breakpoint-md} {
+        background: white;
+        height: 38em;
+    }
     .sect-title{
         margin: 0 0 1em 0;
         @media #{$breakpoint-sm} {
@@ -511,6 +515,18 @@
     @media #{$breakpoint-sm} {
         width: 80vw;
     }
+    @media #{$breakpoint-md} {
+        width: 34em;
+    }
+}
+
+.gift-card-content{
+    @media #{$breakpoint-md} {
+        display: flex;
+        width: 85vw;
+        margin: auto;
+        justify-content: space-between;
+    }
 }
 
 .gift-card-item{
@@ -522,6 +538,11 @@
     @media #{$breakpoint-sm} {
         width: 24em;
         height: 33.5em;
+    }
+    @media #{$breakpoint-md} {
+        width: 31%;
+        height: 12.5em;
+        margin: 0;
     }
 }
 
@@ -547,6 +568,10 @@
     @media #{$breakpoint-sm} {
         width: 85%;
     }
+    @media #{$breakpoint-md} {
+        top: 9em;
+        padding: 1em .5em;
+    }
 
     .normal-text{
         margin-bottom: 0;
@@ -558,6 +583,12 @@
 
 .gift-card-btn{
     margin-top: 2em;
+
+    @media #{$breakpoint-md} {
+        padding: .2em 1em;
+        margin: 1em auto 0 auto!important;
+        width: 7em;
+    }
 }
 
 
