Begin adding gift card detail xl

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -193,7 +193,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                         Obsidian card necklace
                     </p>
                     <div class="gift-card-btn about-cta-btn">
-                        <a href="" class="btn-pink normal-text">Purchase</a>
+                        <a href="gift-cards/swift-gift-card" class="btn-pink normal-text">Purchase</a>
                     </div>
                 </div>
             </div>
