--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -22,7 +22,8 @@
 // 4. Layout-related sections
 @import
   'layout/header',
-  'layout/footer';
+  'layout/footer',
+  'layout/gift_card';
 
 // 5. Components
 @import
