Finish gift card page on xl

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -13,15 +13,19 @@ layout: 'base.njk'
             <img src="/static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
         </div>
         <div class="gift-card-description">
-            <div class="sect-subtitle">
-                Give the gift of a limitless life
-            </div>
-            <div class="normal-text">
-                I am resilient
+            <div class="gift-card-description-title">
+                <div class="sect-subtitle">
+                    Give the gift of a limitless life
+                </div>
+                <div class="sect-subtitle pink-text">
+                    I am resilient
+                </div>
             </div>
             <div class="gift-card-contains">
                 <div class="normal-text">
-                    Contains
+                    <p class="fw-b mb-0">
+                        Contains:
+                    </p>
                     <ul>
                         <li>£50 Coaching Gift Voucher and Envelop</li>
                         <li>Flow & Fancy Obsidian Adjustable Cord Pendant Necklace in Gift Box</li>
@@ -29,21 +33,34 @@ layout: 'base.njk'
                 </div>
             </div>
             <div class="gift-card-details">
-                <div class="normal-text">
+                <div class="gift-card-info normal-text">
                     2020 has stretched us all. <br><br>
 
                     ‘I am resilient’ package allows the recipient to redeem their £50 gift voucher against any coaching program of their choice. 
                     <br><br>
                     In addition they will unwrap this powerful Obsidian Crystal Necklace. Obsidian or the 'Truth Stone' offers clarity to the wearer, promotes adaptability and can help remove any blocks.  Wear it and repeat ‘ I am resilient'.
                 </div>
-                <div class="normal-text">
-                    The details:
+                <div class="gift-card-tc normal-text">
+                    <p class="fw-b mb-0">
+                        The details:
+                    </p>
                     <ul>
                         <li>Gift Voucher valid until December 2021, for a one time redemption only.</li>
                         <li>Necklace comes in gift box, wrapped in hand tie dyed fabric</li>
                         <li>To redeem voucher book free call through The Roadblock Coach website and quote voucher number</li>
                     </ul>
                 </div>
+            </div>
+            <div class="about-cta-btn gift-card-buy-btn">
+                <button class="btn-pink normal-text snipcart-add-item"
+                    data-item-id="Swift"
+                    data-item-price="1"
+                    data-item-url="https://mystifying-morse-754596.netlify.app/services"
+                    data-item-description="Swift Coaching Package"
+                    data-item-image=""
+                    data-item-name="Swift Coaching Package">
+                    Add to cart
+                </button>
             </div>
         </div>
     </div>
