--- a/static/scss/layout/_gift_card.scss
+++ b/static/scss/layout/_gift_card.scss
@@ -4,12 +4,12 @@
 
 .gift-card-detail{
     display: flex;
-    width: 40em;
-    margin: auto;
+    width: 44em;
+    margin: 3em auto 2em auto;
 }
 
 .gift-card-img-carousel{
-    width: 45%;
+    width: 65%;
     margin: 0 1.5em;
 
     img{
@@ -18,5 +18,21 @@
 }
 
 .gift-card-description{
-    width: 50%;
+    width: 55%;
+
+    .sect-subtitle{
+        text-align: left;
+    }
+}
+
+.gift-card-description-title{
+    margin: 0 0 1em 0;
+}
+
+.gift-card-tc{
+    margin-top: 1em;
+}
+
+.snipcart-add-item{
+    border: none;
 }
