Add gift card page on all pages

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -21,6 +21,7 @@ layout: 'base.njk'
                     I am resilient
                 </div>
             </div>
+            <hr class="half-width-hr d-md-none">
             <div class="gift-card-contains">
                 <div class="normal-text">
                     <p class="fw-b mb-0">
@@ -44,7 +45,7 @@ layout: 'base.njk'
                     <p class="fw-b mb-0">
                         The details:
                     </p>
-                    <ul>
+                    <ul class="gift-card-tc-list">
                         <li>Gift Voucher valid until December 2021, for a one time redemption only.</li>
                         <li>Necklace comes in gift box, wrapped in hand tie dyed fabric</li>
                         <li>To redeem voucher book free call through The Roadblock Coach website and quote voucher number</li>
