Add splide to gift card imgs

--- a/src/site/gift-cards/swift-gift-card.njk
+++ b/src/site/gift-cards/swift-gift-card.njk
@@ -9,8 +9,15 @@ layout: 'base.njk'
         Give the gift of a limitless life
     </h2> #}
     <div class="gift-card-detail">
-        <div class="gift-card-img-carousel">
-            <img src="/static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1">
+        <div id="primary-slider" class="gift-card-img-carousel splide">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide"><img class="gift-card-splide-img" src="/static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg"></li>
+                    <li class="splide__slide"><img src="https://images.unsplash.com/photo-1514927465065-bbdc86c7a76c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTh8fGpld2VsbGVyeXxlbnwwfHwwfA%3D%3D&auto=format&fit=crop&w=500&q=60"></li>
+                    <li class="splide__slide"><img src="https://images.unsplash.com/photo-1521120098171-0400b4ec1319?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8ODN8fGpld2VsbGVyeXxlbnwwfHwwfA%3D%3D&auto=format&fit=crop&w=500&q=60"></li>
+                </ul>
+            </div>
+            {# <img src="/static/img/Mhairi_pics/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="Temp-gift-card-1"> #}
         </div>
         <div class="gift-card-description">
             <div class="gift-card-description-title">
